2002-02-28  Shivram U  <shivaram.upadhyayula@wipro.com>

	* src/hex-document.c : (hex_document_class_init) Overriding 
	bonobo_mdi_child class's get_config_string() virtual function.
	Needed for session management.
	
	* src/main.c : (main) Setting the default window icon.
	Removed unnecessary code in the main function

2002-02-06  Jaka Mocnik  <jaka@gnu.org>

	* migrated most of the ui_engine stuff to use ui_component.
	* made Group items radio items.
	* made Insert Mode a toggle item.
	* added listener for both of the above.
	* removed a bunch of warnings.

2002-02-06  jacob berkman  <jacob@ximian.com>

	* src/Makefile.am (ghex2_SOURCES): add some missing sources

	* configure.in (AC_OUTPUT): remove omf-install/Makefile for now

2002-02-05  Jaka Mocnik  <jaka@gnu.org>

	* imported GNOME2 port by the kind people at wipro.
	
2001-11-13  Jaka Mocnik  <jaka@gnu.org>

	* src/gtkhex.c: added block marking and clipboard handling.
	* src/print.c: fixed to work with gnome-print >= 0.32.
	* configure.in: check for GnomePrint >= 0.32.

2001-09-08  Wang Jian  <lark@linux.net.cn>

	* configure.in(ALL_LINGUAS): Renamed zh_CN.GB2312 to zh_CN.

2001-08-31  Abel Cheung  <maddog@linux.org.hk>

	* configure.in (ALL_LINGUAS): zh_TW.Big5 -> zh_TW

2001-08-10  Jaka Mocnik  <jaka@gnu.org>

	* applied a patch to fix problems on ppc platform.

2001-08-10  Jaka Mocnik  <jaka@gnu.org>

	* ghex.spec.in: updated. patch by Ludovic Danigo
	<ludovic.danigo@worldonline.fr>.

2001-07-15  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Added "nn" to ALL_LINGUAS.
	
2001-05-03 John Fleck <jfleck@inkstain.net>

	* patch to src/preferences.c to activate the help button on the
	preferences dialog. fixes bugzilla.gnome.org bug #54073

2001-05-03  Jaka Mocnik  <jaka@gnu.org>

	* src/gtkhex.c: applied a patch for font width handling.

2001-04-15  Nathan Cullen <furyu@fuse.net>

	* src/ghex.h broke up print_document into smaller functions
	(print_document): deleted declaration