@@ -88,6 +88,15 @@ dnl intl/Makefile -- SnM
 dnl Added the program glib-genmarshal -- SnM
 AC_PATH_PROG(GLIB_GENMARSHAL, glib-genmarshal)
 
+dnl Checking for gconftool-2
+AC_PATH_PROG(GCONFTOOL, gconftool-2, no)
+
+if test "x$GCONFTOOL" = xno; then
+	AC_MSG_ERROR([gconftool-2 executable not found in your path - should be installed with GConf])
+fi
+
+AM_GCONF_SOURCE_2
+
 AC_OUTPUT([
 Makefile
 po/Makefile.in
