@@ -1,3 +1,8 @@
+2002-03-01  Shivram U  <shivaram.upadhyayula@wipro.com>
+	* configure.in : Added checks for gconftool-2
+	* Makefile.am : Now installing the schema file in the gconf/schemas
+	directory. Fixes #(73040)
+
 2002-02-28  Shivram U  <shivaram.upadhyayula@wipro.com>
 
 	* src/hex-document.c : (hex_document_class_init) Overriding 
